<resources>
    <string name="app_name">Hercules</string>
    <string name="app_version">v1.0</string>
    <string name="routine">Routine</string>
    <string name="body_part">Body Part</string>
    <string name="workout">Workout</string>
    <string name="empty"></string>
    <string name="name">Name</string>
    <string name="number_of_sets">Number Of Sets</string>
    <string name="repetitions">Repetitions</string>
    <string name="count_in_reverse">Count In Reverse</string>
    <string name="duration">Duration</string>
    <string name="duration_in_seconds">Duration ( In Seconds )</string>
    <string name="time_to_get_in_position">Time to get in position ( in seconds )</string>
    <string name="get_in_position">Get In Position</string>
    <string name="rest_time_after_set">Rest time after each set ( in seconds )</string>
    <string name="rest_time">Rest</string>
    <string name="new_workout">New Workout</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="new_routine">New Routine</string>
    <string name="add_new_body_part">Add New Body Part</string>
    <string name="new_body_part">New Body Part</string>
    <string name="add_workout">Add Workout</string>
    <string name="add_body_part">Add All Workouts For A Body Part</string>
    <string name="add_rest">Add Rest</string>
    <string name="add_time_gap">Add Time Gap</string>
    <string name="toast_workout_added"><![CDATA[Long Press To Drag & Drop]]></string>
    <string name="edit_workout">Edit Workout</string>
    <string name="routine_activity_instructions">1) Tap To Edit \n2) Drag Drop To Change Order \n3) Swipe Left Or Right To Delete</string>
    <string name="edit_body_part_name">Edit Body Part</string>
    <string name="edit_routine">Edit Routine</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item ?</string>
    <string name="set">Set</string>
    <string name="counting_duration">Counting Duration</string>
    <string name="counting_repetitions">Counting Repetitions</string>
    <string name="add_break">Add Time Break</string>
    <string name="break_time_in_seconds">Break Time ( In Seconds )</string>
    <string-array name="player_initiation">
        <item>Okay ! Lets get started</item>
        <item>Lets go</item>
        <item>Beginning routine</item>
        <item>3, 2, 1. Lets go !</item>
    </string-array>
</resources>
