<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WorkoutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_label_workout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:text="@string/new_workout"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_exercise_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_body_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="8dp">

            </androidx.appcompat.widget.AppCompatSpinner>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_time_to_get_in_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_to_get_in_position"
                    android:inputType="number"
                    android:textColorHint="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_repetitions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/edit_text_bottom_margin"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/repetitions"
                        android:inputType="number"
                        android:textColorHint="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_count_repetitions_in_reverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:text="@string/count_in_reverse" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/edit_text_bottom_margin"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duration_in_seconds"
                        android:inputType="number"
                        android:textColorHint="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_count_duration_in_reverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:text="@string/count_in_reverse" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_number_of_sets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number_of_sets"
                    android:inputType="number"
                    android:textColorHint="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_rest_time_after_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rest_time_after_set"
                    android:inputType="number"
                    android:textColorHint="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@color/Gray"
                    android:text="@android:string/cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@android:string/ok"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>