<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.RoutineActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_create_routine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/new_routine"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_routine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_create_routine"
            android:layout_marginBottom="@dimen/edit_text_bottom_margin">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName|textCapSentences" />

        </android.support.design.widget.TextInputLayout>

        <com.woxthebox.draglistview.DragListView
            android:id="@+id/drag_list_view_routine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linear_layout_buttons_create_routine"
            android:layout_below="@+id/til_routine_name" />


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linear_layout_buttons_create_routine"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/colorPrimary"
            fab:menu_animationDelayPerItem="50"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_buttonSpacing="0dp"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimaryDark"
            fab:menu_colorRipple="#99FFFFFF"
            fab:menu_fab_hide_animation="@anim/fab_scale_down"
            fab:menu_fab_label=""
            fab:menu_fab_show_animation="@anim/fab_scale_down"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_labels_colorNormal="#333333"
            fab:menu_labels_colorPressed="#444444"
            fab:menu_labels_colorRipple="#66FFFFFF"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_margin="0dp"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_paddingBottom="4dp"
            fab:menu_labels_paddingLeft="8dp"
            fab:menu_labels_paddingRight="8dp"
            fab:menu_labels_paddingTop="4dp"
            fab:menu_labels_position="left"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
            fab:menu_labels_textColor="#FFFFFF"
            fab:menu_labels_textSize="14sp"
            fab:menu_openDirection="up"
            fab:menu_shadowColor="#66000000"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="3dp"
            fab:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_item_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_exercise_white"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_colorPressed="@color/colorPrimaryDark"
                fab:fab_label="@string/add_exercise"
                fab:fab_size="normal" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_item_body_part"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_body_part_white"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_colorPressed="@color/colorPrimaryDark"
                fab:fab_label="@string/add_body_part"
                fab:fab_size="normal" />

        </com.github.clans.fab.FloatingActionMenu>

        <LinearLayout
            android:id="@+id/linear_layout_buttons_create_routine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/Gray"
                android:text="@android:string/cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@android:string/ok"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>